add two console demo

--- a/static/css/console.css
+++ b/static/css/console.css
@@ -82,3 +82,11 @@
 #displayBox {
     height: inherit;
 }
+img.img-responsive  {
+    max-width: 500px;
+    max-height: 500px;
+}
+
+strong {
+    font-size: 20px;
+}
