--- a/static/css/data-file-upload.css
+++ b/static/css/data-file-upload.css
@@ -13,10 +13,15 @@
 .show-file-row h1 {
     font-size: 20px;
     font-weight: bold;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 5px;
 }
 .thead-center tr th {
     background-color: #e7e7e7;
     text-align: center!important;
+}
+
+#preview-container {
+    border: lightgray 1px solid;
 }
